fix: scrollbar width tenting

--- a/src/global.css
+++ b/src/global.css
@@ -18,6 +18,10 @@ body {
   padding: 0;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 /**
  * Resets
  */
